--- a/app/src/main/res/layout-land/activity_menu.xml
+++ b/app/src/main/res/layout-land/activity_menu.xml
@@ -1,73 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:orientation="vertical"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent" android:id="@+id/menu">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <ImageView
             android:id="@+id/menu-sds-mini-logo"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_centerInParent="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:contentDescription="@null"
             android:src="@drawable/sds"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
             android:id="@+id/menu-title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="@string/sds_title_short"
             android:textColor="@color/dark_color"
             android:textSize="25sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@+id/menu-sds-mini-logo"
             app:layout_constraintStart_toEndOf="@+id/menu-sds-mini-logo"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintTop_toTopOf="@+id/menu-sds-mini-logo" />
 
     <TextView
             android:id="@+id/menu-title-desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/menu-title"
+            android:layout_marginStart="8dp"
             android:text="@string/sds_title_long"
             android:textColor="@color/dark_color"
             android:textSize="15sp"
-            app:layout_constraintTop_toBottomOf="@+id/menu-title"
             app:layout_constraintBottom_toBottomOf="@+id/menu-sds-mini-logo"
-            app:layout_constraintStart_toEndOf="@+id/menu-sds-mini-logo" android:layout_marginStart="8dp"
-    />
+            app:layout_constraintStart_toEndOf="@+id/menu-sds-mini-logo"
+            app:layout_constraintTop_toBottomOf="@+id/menu-title" />
 
     <ImageView
-            android:layout_width="154dp"
-            android:layout_height="181dp" app:srcCompat="@drawable/profile"
             android:id="@+id/profile_img"
+            android:layout_width="154dp"
+            android:layout_height="181dp"
+            android:layout_marginTop="76dp"
             android:clickable="true"
             android:contentDescription="@string/profile_desc"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/daily_img" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:focusable="true"/>
-    <ImageView
-            android:layout_width="154dp"
-            android:layout_height="181dp" app:srcCompat="@drawable/checkup" android:id="@+id/daily_img"
-            android:clickable="true"
-            android:contentDescription="@string/daily_desc"
-            app:layout_constraintStart_toEndOf="@+id/profile_img" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/alert_settings_img"
-            app:layout_constraintTop_toTopOf="@+id/profile_img"
-            app:layout_constraintBottom_toBottomOf="@+id/profile_img" android:focusable="true"/>
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/daily_img"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/menu-title"
+            app:srcCompat="@drawable/profile" />
 
     <ImageView
+            android:id="@+id/daily_img"
             android:layout_width="154dp"
-            android:layout_height="181dp" app:srcCompat="@drawable/notification" android:id="@+id/alert_settings_img"
+            android:layout_height="181dp"
+            android:clickable="true"
+            android:contentDescription="@string/daily_desc"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_img"
+            app:layout_constraintEnd_toStartOf="@+id/alert_settings_img"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/profile_img"
+            app:layout_constraintTop_toTopOf="@+id/profile_img"
+            app:srcCompat="@drawable/checkup" />
+
+    <ImageView
+            android:id="@+id/alert_settings_img"
+            android:layout_width="154dp"
+            android:layout_height="181dp"
             android:clickable="true"
             android:contentDescription="@string/alert_settings_desc"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="@+id/daily_img"
+            app:layout_constraintEnd_toStartOf="@+id/clinical_history_img"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/daily_img"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/daily_img"
-            app:layout_constraintBottom_toBottomOf="@+id/daily_img" android:focusable="true"/>
+            app:srcCompat="@drawable/notification" />
+
+    <ImageView
+            android:id="@+id/clinical_history_img"
+            android:layout_width="154dp"
+            android:layout_height="181dp"
+            android:clickable="true"
+            android:contentDescription="@string/historical_clinic"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="@+id/alert_settings_img"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/alert_settings_img"
+            app:layout_constraintTop_toTopOf="@+id/alert_settings_img"
+            app:srcCompat="@drawable/clinichistory" />
 </androidx.constraintlayout.widget.ConstraintLayout>
