--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,19 +41,9 @@
             app:layout_constraintTop_toBottomOf="@+id/personNif" android:layout_marginEnd="16dp"
             android:layout_marginBottom="22dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/phoneNumberLabel" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"/>
-    <TextView
-            android:text="PhoneNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:id="@+id/personPhoneNumber"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberLabel" android:layout_marginEnd="6dp"
-            android:layout_marginBottom="22dp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/sosContactLabel" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"/>
+
     <TextView
             android:text="@string/sos_contact"
             android:layout_width="wrap_content"
@@ -61,7 +51,8 @@
             android:textSize="25dp"
             android:id="@+id/sosContactLabel"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="9dp" app:layout_constraintTop_toBottomOf="@+id/personPhoneNumber"
+            android:layout_marginStart="9dp"
+            app:layout_constraintTop_toBottomOf="@+id/personDateOfBirth"
             android:layout_marginBottom="23dp" app:layout_constraintBottom_toTopOf="@+id/personSosContactName"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
@@ -84,14 +75,5 @@
             app:layout_constraintTop_toBottomOf="@+id/personSosContactName" android:layout_marginBottom="22dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
-    <TextView
-            android:text="@string/phone_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:id="@+id/phoneNumberLabel"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="2dp" app:layout_constraintTop_toBottomOf="@+id/personDateOfBirth"
-            android:layout_marginBottom="23dp" app:layout_constraintBottom_toTopOf="@+id/personPhoneNumber"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
